force-app/main/default/objects/Payroll_Report__c/Payroll_Report__c.object-meta.xml
<CustomObject>
    <label>Payroll Report</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Payroll Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>