force-app/main/default/objects/Payroll_Report__c/fields/ApprovalNumber__c.field-meta.xml
<CustomField>
    <fullName>ApprovalNumber__c</fullName>
    <label>Approval Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>