force-app/main/default/objects/Payroll_Report__c/fields/ReceipientOrganization__c.field-meta.xml
<CustomField>
    <fullName>ReceipientOrganization__c</fullName>
    <label>Receipient Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>