force-app/main/default/objects/Payroll_Report__c/fields/TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriod__c</fullName>
    <label>Time Period</label>
    <type>DateTime</type>
</CustomField>